--- a/pod/templates/layout.html
+++ b/pod/templates/layout.html
@@ -28,13 +28,18 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="#">Home</a>
+              <a class="nav-item nav-link" href="{{url_for('picks.home')}}">Home</a>
               <a class="nav-item nav-link" href="#">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Login</a>
-                <a class="nav-item nav-link" href="{{url_for('users.register')}}">Register</a>
+            {% if current_user.is_authenticated%}
+              <a class="nav-item nav-link" href="#">My Picks</a>
+              <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+            {% else%}
+              <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
+              <a class="nav-item nav-link" href="{{url_for('users.register')}}">Register</a>
+            {% endif%}
             </div>
           </div>
         </div>
