--- a/pod/templates/register.html
+++ b/pod/templates/register.html
@@ -7,15 +7,43 @@
                 <legend class="border-bottom mb-4">Join Today</legend>
                 <div class="form-group">
                     {{form.firstname.label(class="form-control-label")}}
-                    {{form.firstname(class="form-control form-control-lg")}}
+                    {% if form.firstname.errors%}
+                        {{form.firstname(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {%for error in form.firstname.errors%}
+                            <span>{{error}}</span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.firstname(class="form-control form-control-lg")}}
+                    {%endif%}
+
                 </div>
                 <div class="form-group">
                     {{form.lastname.label(class="form-control-label")}}
-                    {{form.lastname(class="form-control form-control-lg")}}
+                    {% if form.lastname.errors%}
+                        {{form.lastname(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {%for error in form.lastname.errors%}
+                            <span>{{error}}</span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.lastname(class="form-control form-control-lg")}}
+                    {%endif%}
                 </div>
                 <div class="form-group">
                     {{form.email.label(class="form-control-label")}}
-                    {{form.email(class="form-control form-control-lg")}}
+                    {% if form.email.errors%}
+                        {{form.email(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {%for error in form.email.errors%}
+                            <span>{{error}}</span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.email(class="form-control  form-control-lg")}}
+                    {%endif%}
                 </div>
             </fieldset>
             <div class="form-group">
@@ -25,7 +53,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            {# Already Have An Account? <a class="ml-2" href="{{url_for('login')}}">Sign In</a> #}
+            Already Have An Account? <a class="ml-2" href="{{url_for('users.login')}}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
