--- a/pod/templates/layout.html
+++ b/pod/templates/layout.html
@@ -34,7 +34,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             {% if current_user.is_authenticated%}
-              <a class="nav-item nav-link" href="#">My Picks</a>
+              <a class="nav-item nav-link" href="{{ url_for('users.account') }}">My Picks</a>
               <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
             {% else%}
               <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
