--- a/pod/templates/home.html
+++ b/pod/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block content %}
+{% block content1 %}
 <div class="table-responsive">
   <table class="table">
     <thead>
@@ -45,4 +45,4 @@
   </table>
 </div>
 
-{% endblock content %}
+{% endblock content1 %}
