--- a/pod/templates/layout.html
+++ b/pod/templates/layout.html
@@ -57,7 +57,7 @@
               {% endfor %}
             {% endif %}
           {% endwith %}
-          {% block content %}{% endblock %}
+          {% block content1 %}{% endblock %}
         </div>
         <!--<div class="col-md-4">
           <div class="content-section">
@@ -72,6 +72,11 @@
             </p>
           </div>
         </div>-->
+      </div>
+      <div class="row">
+        <div class="col">
+          {% block content2 %}{% endblock %}
+        </div>
       </div>
     </main>
 
