--- a/pod/templates/login.html
+++ b/pod/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block content %}
+{% block content1 %}
     <div>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -32,4 +32,4 @@
             Need an account? <a class="ml-2" href="{{url_for('users.register')}}">Sign Up</a>
         </small>
     </div>
-{% endblock content %}
+{% endblock content1 %}
