--- a/pod/templates/register.html
+++ b/pod/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block content %}
+{% block content1 %}
     <div>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -56,4 +56,4 @@
             Already Have An Account? <a class="ml-2" href="{{url_for('users.login')}}">Sign In</a>
         </small>
     </div>
-{% endblock content %}
+{% endblock content1 %}
