--- a/pod/templates/mypicks.html
+++ b/pod/templates/mypicks.html
@@ -1,22 +1,56 @@
 {% extends "layout.html" %}
 {% block content1  %}
 <h2 class="display-4 mb-4">{{current_user.firstname}}'s Picks</h2>
-<form class="form-inline">
-  <select id="leagues" class="form-control">
-    <option value="" disabled selected>Pick a league</option>
-    <option value="mlb">MLB</option>
-    <option value="nba">NBA</option>
-    <option value="ncaab">NCAAB</option>
-    <option value="ncaaf">NCAAF</option>
-    <option value="nfl">NFL</option>
-    <option value="nhl">NHL</option>
-  </select>
+<form method="POST" class="form-inline">
+  <div>
+  {% if form.sport.errors %}
+    {{ form.sport(class ="form-control is-invalid") }}
+    <div class="invalid-feedback">
+      {% for error in form.sport.errors %}
+        <span>{{ error }}</span>
+      {% endfor %}
+    </div>
+  {% else %}
+    {{ form.sport(class="form-control") }}
+  {% endif %}
 
-  <select id="teams" class="form-control">
-    <option value="" disabled selected>Pick a league first</option>
+  {% if form.team.errors %}
+    {{ form.team(class ="form-control is-invalid")}}
+    <div class="invalid-feedback">
+      {% for error in form.team.errors %}
+        <span>{{ error }}</span>
+      {% endfor %}
+    </div>
+  {% else %}
+    {{ form.team(class="form-control") }}
+  {% endif %}
 
-  </select>
+  {% if form.linetype.errors %}
+    {{ form.linetype(class ="form-control is-invalid") }}
+    <div class="invalid-feedback">
+      {% for error in form.linetype.errors %}
+        <span>{{ error }}</span>
+      {% endfor %}
+    </div>
+  {% else %}
+    {{ form.linetype(class="form-control") }}
+  {% endif %}
+
+  {% if form.line.errors %}
+    {{ form.line(class ="form-control is-invalid") }}
+    <div class="invalid-feedback">
+      {% for error in form.line.errors %}
+        <span>{{ error }}</span>
+      {% endfor %}
+    </div>
+  {% else %}
+    {{ form.line(class="form-control") }}
+  {% endif %}
+  {# {{ form.date }} #}
+  </div>
+  <input type="submit">
 </form>
+<script type="text/javascript" src="{{ url_for('static', filename='updatelist.js') }}"></script>
 {% endblock content1 %}
 
 
